[workspace]
resolver = "2"
members = [
    "sorock",
    "tests/*",
]

[workspace.dependencies]
anyhow = "1.0.90"
async-trait = "0.1.80"
bincode = "1.3.3"
bytes = "1.8"
futures = "0.3"
prost = "0.13"
prost-build = "0.13"
protox = "0.7"
rand = "0.8"
redb = "2.1"
spin = "0.9"
tokio = "1.38"
tonic = "0.12"
tonic-build = "0.12"
tracing = "0.1.40"
uuid = "1.11"

sorock = { path = "sorock" }

[profile.release]
debug = true