[workspace]
resolver = "2"
members = [
    "sorock",
    "sorock-check",
    "testing/*",
]

[workspace.dependencies]
anyhow = "1.0.90"
async-trait = "0.1.80"
bincode = "1.3.3"
bytes = "1.8"
futures = "0.3"
prost = "0.14"
rand = "0.8"
redb = "2.2"
spin = "0.9"
tokio = "1.38"
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tracing = "0.1.40"
uuid = "1.11"

sorock = { path = "sorock" }

[profile.release]
debug = true
