[workspace]
resolver = "2"
members = [
    "sorock",
    "sorock-check",
    "sorock-cli",
    "testing/*",
]

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
bincode = "1.3"
bytes = "1.8"
clap = { version = "4", features = ["derive"] }
crossbeam = "0.8"
futures = "0.3"
prost = "0.14"
rand = "0.9"
redb = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
spin = "0.9"
thiserror = "2"
tokio = "1"
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tracing = "0.1"
uuid = "1"

sorock = { path = "sorock" }

[profile.release]
debug = true
