[package]
name = "integration-tests"
version = "0.1.0"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4", features = ["macros", "rt-multi-thread"] }
tonic = "0.4"
kvs = { path = "../kvs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
bytes = "1"

lol-core = { path = "../lol-core" }
lol-admin = { path = "../lol-admin" }
