[package]
name = "kvs"
version = "0.1.0"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lol-core = { path = "../lol-core", features = ["persistency"] }
async-trait = "0.1"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.8"
anyhow = "1.0"
url = "2.2"

[[bin]]
name = "kvs-client"
path = "src/kvs_client.rs"

[[bin]]
name = "kvs-server"
path = "src/kvs_server.rs"