[package]
name = "lol-admin"
version = "0.7.5"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.10", features = ["macros", "rt-multi-thread"] }
tonic = "0.5"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.0.0-beta.4"

lol-core = { path = "../lol-core" }
