[package]
name = "lol-bridge"
version = "0.6.3"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["net"] }
tonic = "0.4"
async-trait = "0.1"
tower = "0.4"
prost = "0.7"
anyhow = "1.0"

lol-core = { path = "../lol-core" }

[build-dependencies]
tonic-build = "0.3"
prost-build = "0.6"