[package]
name = "lol-core"
version = "0.6.3"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Raft implementation in Rust language."
repository = "https://github.com/akiradeveloper/lol"
readme = "../README.md"
categories = ["algorithms"]
keywords = ["raft"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "fs"] }
tokio-util = { version = "0.6", features = ["codec", "time"] }
tokio-stream = "0.1"
tonic = "0.4"
bytes = { version = "1", features = ["serde"] }
prost = "0.7"
rand = "0.7"
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
rmp = "0.8.9"
rmp-serde = "0.14.3"
log = "0.4"
anyhow = "1.0"
sync_wrapper = "0.1"
phi-detector = "0.3"
bincode = "1.3"

rocksdb = { version = "0.15", optional = true }

[build-dependencies]
tonic-build = { git = "https://github.com/hyperium/tonic.git", branch = "master" }
prost-build = "0.7"

[features]
full = ["persistency"]
persistency = ["rocksdb"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
