[package]
name = "lol-core"
version = "0.9.3"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Raft implementation in Rust language."
repository = "https://github.com/akiradeveloper/lol"
readme = "../README.md"
categories = ["algorithms"]
keywords = ["raft"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "fs"] }
tokio-util = { version = "0.7", features = ["codec", "time"] }
tokio-stream = "0.1"
tonic = "0.8"
prost = "0.11"
http-serde = "1"
bytes = { version = "1", features = ["serde"] }
rand = "0.8"
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
bincode = "1.3"
log = "0.4"
anyhow = "1.0"
phi-detector = "0.3"
derive_more = "0.99"
derive_builder = "0.10"

tower = { version = "0.4", optional = true }
http = { version = "0.2", optional = true }

rocksdb = { version = "0.19", optional = true }

[build-dependencies]
tonic-build = "0.8"
prost-build = "0.11"

[dev-dependencies]
serial_test = "0.9"

[features]
default = []
simple = []
gateway = ["tower", "http"]
rocksdb-backend = ["rocksdb"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]