[package]
name = "lol-monitor"
version = "0.2.0"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["termion"]

[dependencies]
lol-core = { path = "../lol-core" }
tui = "*"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "stream" ] }
termion = { version = "1.5", optional = true }
anyhow = "1.0"
futures = "0.3.5"
clap = "3.0.0-beta.1"
async-stream = "*"