[package]
name = "lol-monitor"
version = "0.7.6"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["termion"]

[dependencies]
tokio = { version = "1.10", features = ["macros", "rt-multi-thread"] }
tonic = "0.5"
tokio-stream = "0.1"
tui = "0.16"
termion = { version = "1.5", optional = true }
anyhow = "1.0"
futures = "0.3"
clap = { version = "3.0.0-rc.4", features = ["derive"] }
async-stream = "0.3"

lol-core = { path = "../lol-core", features = ["gateway"] }
