[package]
name = "lol-test"
version = "0.6.1"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lol-core = { path = "../lol-core" }
anyhow = "1.0"
tokio = { version = "0.2" }
tonic = "0.3"