[package]
name = "lol-test"
version = "0.6.3"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1"
tonic = "0.4"
anyhow = "1.0"

lol-core = { path = "../lol-core" }
