[package]
name = "lol"
version = "0.10.2"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A Multi-Raft implementation in Rust language."
repository = "https://github.com/akiradeveloper/lol"
readme = "../README.md"
categories = ["algorithms"]
keywords = ["raft"]

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
bincode = "1.3"
bytes = { version = "1.5", features = ["serde"] }
derive_more = "0.99"
flume = "0.11.0"
futures = "0.3"
http-serde = "2"
moka = { version = "0.12", features = ["sync"] }
oneshot = "0.1.7"
phi-detector = "0.4"
prost.workspace = true
rand = "0.8"
redb = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
shrinkwraprs = "0.3"
spin = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["rt"] }
tokio-util = "0.7"
tonic.workspace = true
tonic-reflection = "0.12"
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build.workspace = true
prost-build.workspace = true
