[package]
name = "lol2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
bincode = "1.3"
bytes = "1.5"
derive_more = "0.99"
futures = "0.3"
http-serde = "1"
log = "0.4"
moka = { version = "0.12", features = ["sync"] }
phi-detector = "0.4"
prost = { workspace = true }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
shrinkwraprs = "0.3"
spin = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["rt"] }
tokio-util = "0.7"
tonic = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build = { workspace = true }
prost-build = { workspace = true }
