[package]
name = "redb-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
bytes = { workspace = true, features = ["serde"] }
flume = "0.11.0"
oneshot = "0.1.7"
redb = "2.1.0"
serde = { version = "1.0.203", features = ["derive"] }
lolraft.workspace = true

[dev-dependencies]
rand = "0.8"
tokio = { workspace = true, features = ["full"] }