[package]
name = "sorock-check"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
clap.workspace = true
crossbeam.workspace = true
futures.workspace = true
prost.workspace = true
rand.workspace = true
ratatui = "0.29.0"
spin.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic.workspace = true
tonic-prost.workspace = true
tui-widget-list = "0.13.1"

[build-dependencies]
tonic-prost-build.workspace = true
