[package]
name = "sorock-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
prost.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic.workspace = true
tonic-prost.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true