[package]
name = "sorock-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
clap.workspace = true
futures.workspace = true
humantime = "2.3"
prost.workspace = true
ratatui = "0.29.0"
regex = "1.12"
spin.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic.workspace = true
tonic-prost.workspace = true
tui-widget-list = "0.13.1"

[build-dependencies]
tonic-prost-build.workspace = true

[dev-dependencies]
proptest = "0.9.6"