[package]
name = "sorock"
version = "0.11.0"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A Multi-Raft implementation in Rust language."
repository = "https://github.com/akiradeveloper/sorock"
readme = "../README.md"
categories = ["algorithms"]
keywords = ["raft"]

[dependencies]
anyhow.workspace = true
async-stream = "0.3"
async-trait = "0.1"
bincode.workspace = true
bytes = { workspace = true, features = ["serde"] }
derive_more = { version = "1", features = ["full"] }
flume = "0.11.0"
futures.workspace = true
http-serde = "2"
moka = { version = "0.12", features = ["sync"] }
oneshot = "0.1.7"
phi-detector = "0.4"
prost.workspace = true
rand.workspace = true
redb.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
shrinkwraprs = "0.3"
spin = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["rt"] }
tokio-util = "0.7"
tonic.workspace = true
tonic-reflection = "0.12"
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[build-dependencies]
prost-build.workspace = true
protox.workspace = true
tonic-build.workspace = true