[package]
name = "sorock"
version = "0.12.0"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A Multi-Raft implementation in Rust"
repository = "https://github.com/akiradeveloper/sorock"
readme = "../README.md"
categories = ["algorithms"]
keywords = ["raft"]

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
bincode.workspace = true
bytes = { workspace = true, features = ["serde"] }
crossbeam.workspace = true
derive_more = { version = "2", features = ["full"] }
futures.workspace = true
http-serde = "2.1"
itertools = "0.14"
moka = { version = "0.12", features = ["sync"] }
oneshot = "0.1"
phi-detector = "0.4"
prost.workspace = true
rand.workspace = true
redb.workspace = true
serde.workspace = true
serde_bytes.workspace = true
spin.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt"] }
tokio-util = "0.7"
tonic.workspace = true
tonic-prost.workspace = true
tonic-reflection = "0.14"
tracing.workspace = true

[dev-dependencies]
tabled = "0.20.0"
tempfile = "3"
tokio = { workspace = true, features = ["full"] }

[build-dependencies]
tonic-prost-build.workspace = true

[[bench]]
name = "log_storage"
harness = false
