[package]
name = "atomic-counter"
version = "0.1.0"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
tonic = "0.6"
tokio = { version = "1.10", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bytes = { version = "1", features = ["serde"] }
rand = { version = "0.8", features = ["std_rng"] }

lol-core = { path = "../../lol-core" }

[[bin]]
name = "atomic-counter"
path = "src/main.rs"
