[package]
name = "kvs"
version = "0.1.0"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
tonic = "0.6"
tokio = { version = "1.10", features = ["macros", "rt-multi-thread", "net", "signal"] }
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9"
anyhow = "1.0"
log = "0.4"
bytes = { version = "1", features = ["serde"] }
bincode = "1.3"

lol-core = { path = "../../lol-core", features = ["rocksdb-backend", "simple"] }

[[bin]]
name = "kvs-client"
path = "src/kvs_client.rs"

[[bin]]
name = "kvs-server"
path = "src/kvs_server.rs"
