[package]
name = "env"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
port_check = "0.3"
redb.workspace = true
spin.workspace = true
tempfile = "3"
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"

sorock.workspace = true
example = { path = "../example" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }