[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
bincode.workspace = true
bytes.workspace = true
futures.workspace = true
serde = { version = "1.0", features = ["derive"] }
spin = "0.9"
tempfile = "3.13.0"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-retry = "0.3"
tokio-util = "0.7"
tonic = { workspace = true, features = ["zstd"] }
tonic-prost.workspace = true
tracing.workspace = true
uuid.workspace = true

sorock.workspace = true
serde_json = "1.0.132"

[build-dependencies]
tonic-prost-build.workspace = true
