[package]
name = "sorock-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true

env = { path = "../env" } 
sorock = { workspace = true }
example = { path = "../example" }

[dev-dependencies]
futures.workspace = true
rand.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic.workspace = true
uuid.workspace = true
