[package]
name = "env"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bollard = "0.16"
log = "0.4"
spin = "0.9"
tokio = "1"
tonic = { workspace = true }

testapp = { path = "../testapp" }

[dev-dependencies]
env_logger = "*"
serial_test = "2"
test-log = "0.2.12"
tokio = { version = "1", features = ["full"] }