[package]
name = "env"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
port_check = "0.2.1"
redb = "2.1.0"
spin = "0.9"
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3.18"

sorock.workspace = true
testapp = { path = "../testapp" }

[dev-dependencies]
serial_test = "2"
test-log = "0.2.12"
tokio = { version = "1", features = ["full"] }