[package]
name = "lol-benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
futures = "0.3"
lol-tests = { path = "../lol-tests" }
tokio = { workspace = true, features = ["full"] }
tonic.workspace = true
