[package]
name = "lol-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"

env = { path = "../env" } 
lolraft = { workspace = true }
testapp = { path = "../testapp" }

[dev-dependencies]
env_logger = "*"
futures = "0.3"
rand = "0.8"
serial_test = "3"
test-log = "0.2.12"
tokio = { version = "1", features = ["full"] }
tonic = { workspace = true }
uuid = "1.5"
