[package]
name = "lol-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true

env = { path = "../env" } 
lolraft = { workspace = true }
testapp = { path = "../testapp" }

[dev-dependencies]
futures = "0.3"
rand = "0.8"
serial_test = "3"
test-log = "0.2.12"
tokio = { workspace = true, features = ["full"] }
tonic.workspace = true
uuid = "1.5"
