[package]
name = "mrbench"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.18", features = ["derive"] }
console-subscriber = "0.4.0"
futures = "0.3"
humantime = "2.1.0"
tokio = { workspace = true, features = ["full"] }

lol-tests = { path = "../lol-tests" }
