[package]
name = "testapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
bincode = "1.3"
bytes = "1.5"
envy = "0.4"
env_logger = "0.10"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
shrinkwraprs = "0.3"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3"
tokio-util = "0.7"
tonic = { workspace = true }
uuid = "1.5"

lol2 = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }